--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     
 </head>
 <body>
+    <form>
+        <input type='text' id="theText">
+        <input type="submit" id="btnSubmit" value="Submit">
+    </form>
+    
+
     <!-- Javascript Dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
