finished, but sloppy

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     
 </head>
 <body>
+    <h1 style="color:aquamarine">hey kids!</h1>
     <form>
-        <input type='text' id="theText">
+        <input type="text" id="inputText">
         <input type="submit" id="btnSubmit" value="Submit">
     </form>
     
